[project]
name = "dseval"
version = "0.0.1"
dependencies = [
    "langchain",
    "python-dotenv",
    "numpy",
    "pandas",
    "scipy",
    "pyyaml",
    "colorama",
    "psutil",
]

[tool.setuptools.packages.find]
include = ["dseval*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "isort",
    "scikit-learn",
]
