[project]
name = "dseval"
version = "0.0.1"
dependencies = [
    "langchain",
    "python-dotenv",
    "numpy",
    "pandas",
    "scipy",
    "pyyaml",
    "colorama",
    "psutil",
]

[tool.setuptools.packages.find]
include = ["dseval*"]

[tool.setuptools.package-data]
mypkg = ["*.html", "*.js", "*.css"]

[project.optional-dependencies]
agent = [
    "mlcopilot",
    "codeinterpreterapi",
]
dev = [
    "pytest",
    "flake8",
    "black",
    "isort",
    "scikit-learn",
    "tabulate",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
